New Projection Developed: Auto Projection with Annotated Model